# docs/swagger.json
@@ -672,7 +672,7 @@
                 }
             }
         },
-        "/api/admin/licenses/": {
+        "/api/admin/licenses/{id}": {
             "get": {
                 "security": [
                     {
@@ -695,7 +695,7 @@
                         "type": "string",
                         "description": "라이선스 ID",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
